<resources>
    <string name="app_name">App test</string>

    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="activity_lifecycle">Activity Lifecycle</string>
    <string name="intent">Intent</string>
    <string name="task_and_back_stack">Task and Back Stack</string>
    <string name="user_interface">User Interface</string>
    <string name="resources">Resources</string>
    <string name="share_preference">Share Preference</string>
    <string name="database">Database</string>
    <string name="database_ss">Database SS</string>

    <string name="button_sent_custom_broadcast">Sent Custom Broadcast</string>
    <string name="button_open_link_in_browser">Open link in browser</string>
    <string name="button_call_phone">Call phone</string>
    <string name="button_next">Next</string>
    <string name="button_share_content">Share content</string>
    <string name="button_open_in_map_view">Open in map view</string>
    <string name="button_take_picture">Take picture</string>
    <string name="button_pick_picture">pick picture</string>
    <string name="button_go_to_activity_one">Activity One(Single Top)</string>
    <string name="button_go_to_activity_two">Activity Two(Default)</string>
    <string name="button_activity_three_single_task">Activity Three(Single task)</string>
    <string name="button_activity_four_single_instance">Activity Four(Single Instance)</string>
    <string name="button_activity_five_flag_new_task">Activity Five(Flag new Task)</string>
    <string name="button_activity_six_affinity">Activity Six(Affinity)</string>
    <string name="button_finish">Finish</string>
    <string name="button_basic_view">Basic View</string>
    <string name="button_layout_activity">Layout Activity</string>
    <string name="button_constraint_layout">Constraint Layout</string>
    <string name="button_animate">Animate</string>
    <string name="button_change_photo">Change Photo</string>
    <string name="button_dialog">Dialog</string>
    <string name="button_ss_image_view">SS Image View</string>
    <string name="button_change_view">Change View</string>
    <string name="button_alert_dialog">Alert Dialog</string>
    <string name="button_show_custom_dialog">Show Custom Dialog</string>
    <string name="button_show_date_picker_dialog">Show Date picker Dialog</string>
    <string name="button_show_time_picker_dialog">Show Time Picker Dialog</string>
    <string name="button_sheets">sheets</string>
    <string name="button_fragments">Fragments</string>
    <string name="button_drawer">Drawer</string>
    <string name="button_view_pager_tab">ViewPagerTab</string>
    <string name="button_tab">Tab</string>
    <string name="button_change_language">Change Language</string>
    <string name="button_about_us">About Us</string>
    <string name="button_list_view">List View</string>
    <string name="button_recycler_view">Recycler View</string>
    <string name="button_grid_view">Grid View</string>
    <string name="button_change_theme">Change Theme</string>
    <string name="button_save">Save</string>


    <string name="hint_value_one">Value One</string>
    <string name="hint_value_two">Value Two</string>

    <string name="label_result">Result</string>
    <string name="label_resource_subtitle">Android resource will be testing in this page</string>
    <string name="label_string_resources">String Resources</string>
    <string name="label_dynamic_string">Mg Mg has %d %s and %d %s.</string>
    <string name="label_localized_string">This is a localized string</string>


    <string name="affinity_caculation">"affinity.caculation"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_all_mail">All mail</string>

    <string name="menu_title_main">Main</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_sent">Sent</string>
    <string name="menu_draft">Draft</string>
    <string name="menu_spam">Spam</string>
    <string name="menu_trash">Trash</string>

    <string name="menu_title_other">Other</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_about_us">About us</string>
    <string name="title_activity_tab">TabActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_video">Video</string>
    <string name="menu_notification">Notification</string>

    <string name="menu_action">Action</string>
    <string name="menu_comedy">Comedy</string>
    <string name="menu_drama">Drama</string>
    <string name="menu_horror">Horror</string>
    <string name="menu_scifi">Scifi</string>

    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


</resources>