<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userinterface.UserInterfaceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="UselessLeaf" >

        <Button
            android:id="@+id/btn_basic_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_basic_view"/>

        <Button
            android:id="@+id/btn_layout_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_layout_activity"/>

        <Button
            android:id="@+id/btn_layout_constraint_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_constraint_layout"/>

        <Button
            android:id="@+id/btn_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_dialog"/>

        <Button
            android:id="@+id/btn_ss_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_ss_image_view"/>

        <Button
            android:id="@+id/btn_ss_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SS Dialog"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btn_sheets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sheets" />

        <Button
            android:id="@+id/btn_fragments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_fragments" />

        <Button
            android:id="@+id/btn_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_drawer" />

        <Button
            android:id="@+id/btn_view_pager_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_view_pager_tab" />

        <Button
            android:id="@+id/btn_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_tab" />




    </LinearLayout>





</ScrollView>