<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonActivityOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_activity_one"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/buttonActivityTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_activity_two"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp" />
    <Button
        android:id="@+id/buttonActivityThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_activity_three_single_task"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp" />
    <Button
        android:id="@+id/buttonActivityFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_activity_four_single_instance"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp" />
    <Button
        android:id="@+id/buttonActivityFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_activity_five_flag_new_task"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp" />

</LinearLayout>