<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".userinterface.DialogActivity">

    <Button
        android:id="@+id/btn_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_alert_dialog" />

    <Button
        android:id="@+id/btn_custom_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show_custom_dialog" />

    <Button
        android:id="@+id/btn_date_picker_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show_date_picker_dialog" />

    <Button
        android:id="@+id/btn_time_picker_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show_time_picker_dialog" />




</LinearLayout>