<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resources.ResourcesActivity"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_resource_subtitle"
        android:textSize="@dimen/text_subtitle"
        android:textStyle="bold"/>
    
    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/spacing_large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_change_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_change_language"/>

        <Button
            android:id="@+id/btn_change_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_change_theme"/>

        <Switch
            android:id="@+id/switchTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch Theme"
            tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/spacing_large"/>

   <LinearLayout
       android:id="@+id/layout_string_resources"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/label_string_resources"
           android:textSize="@dimen/text_title"
           android:textStyle="bold"/>

       <TextView
           android:id="@+id/tv_dynamic_string"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin_medium"
           android:text="@string/label_dynamic_string"
           android:textSize="@dimen/text_normal"/>

       <TextView
           android:id="@+id/tv_localized_string"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin_medium"
           android:text="@string/label_localized_string"
           android:textSize="@dimen/text_normal"/>
       
       <com.google.android.material.divider.MaterialDivider
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:layout_marginTop="@dimen/margin_large"/>

   </LinearLayout>


</LinearLayout>