<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".taskandbackstack.SixActivity">

    <EditText
        android:id="@+id/edt_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_value_one"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/edt_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_value_two"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/button_next"
        />


</LinearLayout>