<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntentActivity">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Message"
        tools:ignore="HardcodedText" />
    <Button
        android:id="@+id/btnOpenLink"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_open_link_in_browser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/btnPhoneCall"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_call_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnOpenLink"
        android:layout_marginTop="5dp"/>


    <Button
        android:id="@+id/btnOPenMap"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_open_in_map_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnPhoneCall"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_pick_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnOPenMap"
        android:layout_marginTop="5dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePicture"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="20dp" />
    <androidx.cardview.widget.CardView
        android:id="@+id/btnShareContent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="?attr/selectableItemBackground"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/share_icons"
            tools:ignore="ContentDescription"
            android:layout_margin="10dp"/>

    </androidx.cardview.widget.CardView>










</androidx.constraintlayout.widget.ConstraintLayout>